--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+            <!-- Práctica de Clientes/Diseño
+                Hecha por : Francisco José Garcia Reinoso -->
 <!DOCTYPE html>
 <html lang="es">
 <head>
